CI/cd Terrafomr provisioning

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -2,6 +2,8 @@ name: Terraform Deploy
 
 on:
   push:
+    paths:
+      - 'terraform/**'
     branches:
       - master
   workflow_dispatch:   # 👈 опционално, можеш рачно да го пуштиш
