CI/cd Terrafomr provisioning

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./terraform  # Set the working directory
 
     steps:
       # Checkout repo
