CI/cd Terrafomr provisioning

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -4,6 +4,8 @@ on:
   push:
     paths:
       - 'terraform/**'
+      - '.github/workflows/Terraform.yml'
+
     branches:
       - master
   workflow_dispatch:
