--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -1,47 +1,56 @@
-name: Terraform Deploy
+name: Terraform Azure Provision
+# GitHub Actions pipeline that runs on push to the terraform folder.
+# It will initialize Terraform, run plan, then apply changes automatically.
 
 on:
   push:
     paths:
       - 'terraform/**'
-      - '.github/workflows/Terraform.yml'
+      - '.github/workflows/terraform.yml'
 
-    branches:
-      - master
-  workflow_dispatch:
+  workflow_dispatch:  # Optional: allows manual run
 
 jobs:
   terraform:
+    name: 'Terraform Plan and Apply'
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
 
+    defaults:
+      run:
+        working-directory: terraform  # All Terraform commands are run from terraform/ folder
+
+    env:
+      # Azure Service Principal credentials
+      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+
+      # Terraform input variables from secrets
+      TF_VAR_client_id: ${{ secrets.ARM_CLIENT_ID }}
+      TF_VAR_client_secret: ${{ secrets.ARM_CLIENT_SECRET }}
+      TF_VAR_subscription_id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+      TF_VAR_tenant_id: ${{ secrets.ARM_TENANT_ID }}
+
+    steps:
+      # 1️⃣ Checkout repository
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      # 2️⃣ Install Terraform
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.6
+          terraform_version: 1.7.0  # Specify the Terraform version you want
 
+      # 3️⃣ Terraform Init
       - name: Terraform Init
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: terraform init
 
+      # 4️⃣ Terraform Plan
       - name: Terraform Plan
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: terraform plan
 
+      # 5️⃣ Terraform Apply
       - name: Terraform Apply
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
         run: terraform apply -auto-approve
