CI/cd Terrafomr provisioning

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -45,7 +45,7 @@ jobs:
 
       # 3️⃣ Terraform Init
       - name: Terraform Init
-        run: terraform init -reconfigure
+        run: terraform init
 
 
         # 4️⃣ Terraform Plan
