--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Azure CLI Login
+        run:
+            az login --service-principal -u "${{ secrets.ARM_CLIENT_ID }}" -p "${{ secrets.ARM_CLIENT_SECRET }}" --tenant "${{ secrets.ARM_TENANT_ID }}" --output none
+            az account set --subscription "${{ secrets.ARM_SUBSCRIPTION_ID }}"
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
