CI/cd Terrafomr provisioning

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: sysopExapp
     spec:
+      imagePullSecrets:
+        - name: acr-secret
       containers:
       - name: app
         image: sysopsex123.azurecr.io/sysopexapp:v1
