--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -2,6 +2,9 @@ name: CI/CD to AKS
 
 on:
   push:
+    paths:
+      - 'k8s/**'
+      - '.github/workflows/ci-cd.yaml.yml'
     branches:
       - master
 
