--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: db-secret
-              key: POSTGRES_HOST
+              key: DATABASE_URL
         - name: AZURE_STORAGE_CONNECTION_STRING
           valueFrom:
             secretKeyRef:
