--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,9 @@ spec:
 
       containers:
       - name: app
-        image: sysopsex123.azurecr.io/sysopexapp:v1
+        image: sysopex123.azurecr.io/sysopexapp:v1
+
+
 
         ports:
         - containerPort: 8000
