--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,8 @@ spec:
 
       containers:
       - name: app
-        image: sysopex123.azurecr.io/sysopexapp:v1
+        image: sysopex123.azurecr.io/sysopexapp:v2
+        imagePullPolicy: Always
 
 
 
