--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -51,7 +51,8 @@ jobs:
       run: |
         kubectl apply -f k8s/deployment.yaml
         kubectl apply -f k8s/service.yaml
-        
+        kubectl apply -f k8s/ingress.yaml
+
 
 #    # ✅ Verify rollout
 #    - name: Verify App Rollout
