--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -4,8 +4,8 @@ metadata:
   name: sysopex-ingress
   namespace: default
   annotations:
-    kubernetes.io/ingress.class: "nginx"
 spec:
+  ingressClassName: webapprouting.kubernetes.azure.com
   rules:
   - host: app.example.com     # може да користиш DNS име или да тестираш со IP + Host header
     http:
